feature(rating): like and dislike api endpoint [starts #167164991]
