# src/routes/novel.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import createNovel from '../controllers/novelController';
 import middlewares from '../middlewares';
+import updateLikes from '../controllers/likesController';
 
 const { novelValidator, verifyToken, authorizeUser } = middlewares;
 
@@ -10,5 +11,6 @@ const novel = express.Router();
 
 // Route to create a novel
 novel.post('/novels', validate, verifyToken, authorizeUser(['author', 'admin', 'superadmin']), createNovel);
+novel.post('/novels/:slug/like', verifyToken, authorizeUser(['author', 'admin', 'superadmin']), updateLikes);
 
 export default novel;
